install/deployment_yamls/istio.yaml
# Sample VS and GW for deployment of Meshplay on Istio
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: meshplay-gateway
  namespace: meshplay
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: meshplay
  namespace: meshplay
spec:
  hosts:
  - "*"
  gateways:
  - meshplay-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: meshplay
        port:
          number: 9081
---
